# salmon-search

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
salmon_search/: db.py  main.py  resources.py  schemas.py
salmon_search.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_one.py
