[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# https://stackoverflow.com/questions/75597558/python-pyproject-toml-settings-for-use-with-hatchling-to-target-command-line-app
[project.scripts]
salmonn = "salmon_search.cli:main_cli"

[project]
name = "salmon_search"
version = "0.0.1"
authors = [
    { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"